--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html"> Inicio </a></li>
+                <li><a href="inicio.html"> Inicio </a></li>
                 <li><a href="Catalogo.html">Catálogo </a></li>
                 <li><a href="contactos.html">Contacto </a></li>
             </ul>
