--- a/Catalogo.html
+++ b/Catalogo.html
@@ -7,7 +7,15 @@
     <title>Catalogo </title>
 </head>
 <body>
-    <!--SUBPAGINA DE CATALOGO-->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="inicio.html"> Inicio </a></li>
+                <li><a href="Catalogo.html">Catálogo </a></li>
+                <li><a href="contactos.html">Contacto </a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="accesorios">
         <h2>Accesorios</h2>
     
