--- a/contactos.html
+++ b/contactos.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="inicio.html"> Inicio </a></li>
+                <li><a href="Catalogo.html">Catálogo </a></li>
+                <li><a href="contactos.html">Contacto </a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="contacto" class="contacto">
         <div class="container">
             <h2>Contáctanos</h2>
