--- a/cata.html
+++ b/cata.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Catalogo.css">
+    <link rel="stylesheet" href="cata.css">
     <title>Catalogo </title>
 </head>
 <body>
