--- a/contacto.html
+++ b/contacto.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="inicio.html"> Inicio </a></li>
-                <li><a href="Catalogo.html">Catálogo </a></li>
-                <li><a href="contactos.html">Contacto </a></li>
+                <li><a href="index.html"> Inicio </a></li>
+                <li><a href="cata.html">Catálogo </a></li>
+                <li><a href="contacto.html">Contacto </a></li>
             </ul>
         </nav>
     </header>
