--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tienda de accesorios</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/AccesoriosTIENDA.github.io/style.css">
+
 </head>
 <body>
     <header>
